--- a/static/index.html
+++ b/static/index.html
@@ -5,21 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oh My Zsh stargazers</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans&display=swap" rel="stylesheet">
     <style>
     html {
         height: 100%;
         width: 100%;
+        background-color: rgb(16, 16, 16);
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     body {
         text-align: center;
         font-family: 'Open Sans', sans-serif;
+        color: hsl(0, 0%, 92%);
+        margin-top: -20vh;
     }
     #star-counter {
         font-family: Merriweather, serif;
         font-size: 15vw;
         font-weight: 900;
-        text-shadow: 10px 8px 5px rgb(172, 172, 172);
+        text-shadow: 4px 6px 5px hsl(0, 0%, 20%);
         margin-bottom: 0;
     }
     #star-counter + p {
