--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,22 @@
         text-align: center;
         font-family: 'Open Sans', sans-serif;
         color: hsl(0, 0%, 92%);
+    }
+    header {
+        text-align: left;
+        position: absolute;
+        left: 2vw;
+        top: 2vw;
+        padding: 0;
+        margin: 0;
+    }
+    header img {
+        height: 128px;
+        width: auto;
+        min-height: 72px;
+        max-height: 18vh;
+    }
+    main {
         margin-top: -20vh;
     }
     #stars-counter {
@@ -48,8 +64,15 @@
     </style>
 </head>
 <body>
-    <h1 id="stars-counter">-</h1>
-    <p>stars</p>
+    <header>
+        <a href="https://github.com/ohmyzsh/ohmyzsh">
+            <img src="/favicon.png" alt="Oh My Zsh logo" height="128" width="128" />
+        </a>
+    </header>
+    <main>
+        <h1 id="stars-counter">-</h1>
+        <p>stars</p>
+    </main>
     <p id="connected-counter">0 connected</p>
 
     <script src="odometer.min.js"></script>
