Remove bundled odometer; use unpkg.com

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <title>Oh My Zsh stargazers</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="odometer-theme-default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/odometer@0.4.8/themes/odometer-theme-default.css" />
     <style>
     html {
         height: 100%;
@@ -75,7 +75,7 @@
     </main>
     <p id="connected-counter">0 connected</p>
 
-    <script src="odometer.min.js"></script>
+    <script src="https://unpkg.com/odometer@0.4.8/odometer.min.js"></script>
     <script>
         var od = new Odometer({
             el: document.getElementById('stars-counter'),
