--- a/static/index.html
+++ b/static/index.html
@@ -70,12 +70,13 @@
         </a>
     </header>
     <main>
-        <h1 id="stars-counter">-</h1>
+        <h1 id="stars-counter" data-count="0">-</h1>
         <p>stars</p>
     </main>
     <p id="connected-counter">0 connected</p>
 
     <script src="https://unpkg.com/odometer@0.4.8/odometer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
     <script>
         var od = new Odometer({
             el: document.getElementById('stars-counter'),
@@ -102,7 +103,13 @@
             }
 
             if (stars > 0) {
+                let beforeStars = parseInt(starsCounter.dataset.count, 10)
+                starsCounter.dataset.count = stars
                 starsCounter.textContent = "" + stars
+
+                if (beforeStars < 1e5 && stars >= 1e5) {
+                    confetti && confetti.start(5000, 50, 120)
+                }
             }
         }
 
