Fix erroneous double loop over WebSocket clients

--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
 
         // debounce logic from https://davidwalsh.name/javascript-debounce-function
         function debounce(func, wait, immediate) {
-            var timeout;
+            var timeout
             return function() {
                 var context = this, args = arguments
                 var later = function() {
