Minor OCD stuff

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oh My Zsh stargazers</title>
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:900|Open+Sans&display=swap" >
     <link rel="stylesheet" href="https://unpkg.com/odometer@0.4.8/themes/odometer-theme-default.css" />
     <style>
     html {
