--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
     header {
         text-align: left;
         position: absolute;
-        left: 2vw;
+        left: calc(2vw + 15px);
         top: 2vw;
         padding: 0;
         margin: 0;
@@ -52,7 +52,7 @@
         margin-top: -1vw;
     }
     #connected-counter {
-        position: absolute;
+        position: fixed;
         right: 10px;
         bottom: 10px;
         margin: 0;
