Make confetti canvas occupy the whole screen

--- a/static/index.html
+++ b/static/index.html
@@ -62,6 +62,9 @@
     #connected-counter.disconnected {
         color: #f00;
     }
+    #confetti-canvas {
+        left: 0;
+    }
     </style>
 </head>
 <body>
