--- a/static/index.html
+++ b/static/index.html
@@ -13,12 +13,16 @@
     html {
         height: 100%;
         width: 100%;
+    }
+    body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
         background-color: rgb(16, 16, 16);
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-    body {
         text-align: center;
         font-family: 'Open Sans', sans-serif;
         color: hsl(0, 0%, 92%);
@@ -61,9 +65,6 @@
     }
     #connected-counter.disconnected {
         color: #f00;
-    }
-    #confetti-canvas {
-        left: 0;
     }
     </style>
 </head>
