Fix counter shadow overlap

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,9 @@
     #connected-counter.disconnected {
         color: #f00;
     }
+    #stars-counter .odometer-digit .odometer-digit-inner {
+        overflow: initial !important;
+    }
     </style>
 </head>
 <body>
